assets/css/styles.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap');


/* Clear padding, and margin */
* {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
}
input[type=number]::-webkit-inner-spin-button, 
input[type=number]::-webkit-outer-spin-button { 
   appearance: none;
   -webkit-appearance: none; 
   -moz-appearance: none;
   margin: 0; 
} 
 input::placeholder {
   color: rgba(158, 158, 158, 0.5);
   font-weight: 600;
}
input, select {
   border: 2px solid rgb(165, 165, 165);
}
input:focus::placeholder {
   color: transparent;
}
input:focus, select:focus {
   border: 2px solid #4aa5eb;
   outline: none;
   box-shadow: 0 0 4px 1px rgba(74, 165, 235, 0.8);
}

body {
   display: flex;
   justify-content:center;
   align-items: center;
   height: 100%;
   min-height: 100%;
   margin: 25px 0;
   background-color: #393939;
   background-image: url("../../images/meatal-background-black.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   background-blend-mode: overlay;
   font-family: 'Roboto', sans-serif;
}

.form-container {
   position: relative;
   padding: 18px;
   border-radius: 4px;
   background-color: #f6f6f6;
   width: 400px;
}
.tab-wrapper {
   display: flex;
   justify-content: space-between;
   align-items: center;
   width: 100%;
   margin-bottom: 25px;
}
.tablinks {
   width: 50%;
   height: 45px;
   color: white;
   font-weight: 600;
   padding: 10px 15px;
   background-color: rgb(112, 112, 112);
   /* border-radius: 4px; */
   border: none;
   cursor: pointer;
   transition: 0.3s;
}
.tablinks:hover {
   background-color: rgb(250, 145, 48);
}
.tablinks.active {
   background-color: rgba(249, 99, 2, 1);
}
.tabcontent {
   display: none;
}

hr {
   margin: 20px 0;
}

.form-heading {
   position: relative;
   font-size: 12px;
   margin-bottom: 25px;
   border-bottom: 3px solid rgb(168, 168, 168);
} 
.form-heading > h1 {
   position: relative;
   bottom: -3px;
   width: fit-content;
   border-bottom: 3px solid rgba(247, 100, 2);
}
.input-group {
   position: relative;
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin-bottom: 15px;
}

.input-group input[type="number"] {
   width: 25%;
   height: 50px;
   padding: 0 30px 0 10px;
   border-radius: 4px;
   /* text-align: center; */
   font-size: 17px;
   font-weight: 600;
   color: #333;
}
.input-group > .input-unit-inch {
   position: absolute;
    right: 8px;
    opacity: 0.5;
    font-weight: 600;
}
.input-group:nth-last-child(3) {
   margin-bottom: 40px;
}
.input-wrapper {
   display: flex;
   justify-content: space-between;
   align-items: center;
   width: 100%;
}
.input-group label {
   font-weight: 500;
   font-size: 15px;
}


/* Roll width selection styling */
#roll-width {
   width: auto;
   height: 50px;
   padding: 0 10px;
   border-radius: 4px;
   text-align: center;
   font-size: 15px;
   font-weight: 600;
   color: #333;
}
.add-btn-container {
   display: flex;
   justify-content: space-between;
   align-items: center;
   width: 100%;
}
#add-cut-btn {
   display: flex;
   justify-content: center;
   align-items: center;
   width: 50%;
   height: 45px;
   color: rgba(249, 99, 2, 1);
   font-weight: 600;
   margin-bottom: 25px;
   padding: 10px 15px;
   border: 2px solid rgba(249, 99, 2, 1);
   background-color: #fff;
   border-radius: 2px;
   cursor: pointer;
   transition: 0.3s; 
}
#add-cut-btn:hover {
   color: #fff;
   background-color:rgba(249, 99, 2, 1);
}

/* Form Buttom Styling */
.buttons-container {
   display: flex;
   justify-content: space-between;
   align-items: center;
   width: 100%;
}
#submit-btn {
   display: flex;
   justify-content: center;
   align-items: center;
   width: 55%;
   height: 45px;
   color: rgba(249, 99, 2, 1);
   font-size: 15px;
   font-weight: 600;
   padding: 10px 15px;
   background-color: #fff;
   border-radius: 2px;
   border: 2px solid rgba(249, 99, 2, 1);
   cursor: pointer;
   transition: 0.3s;
}
#submit-btn:hover {
   color: #fff;
   background-color: rgba(249, 99, 2, 1);
}
#reset-btn {
   display: flex;
   justify-content: center;
   align-items: center;
   width: 40%;
   height: 45px;
   color: rgb(89, 89, 89);
   font-size: 15px;
   font-weight: 600;
   padding: 10px 15px;
   background-color: #fff;
   border-radius: 2px;
   border: 2px solid rgba(72, 72, 72, 1);
   cursor: pointer;
   transition: 0.3s;
}
#reset-btn:hover {
   color: #f6f6f6;
   background-color: rgba(72, 72, 72, 1);
}
#output-roll-size,
#output-cut-price {
   border: 2px solid grey;
   border-radius: 4px;
   margin-top: 20px;
   padding: 18px;
   background-color: #f9f9f9;
   visibility: hidden;
   opacity: 0;
   transition: visibility 0s linear 0.5s, opacity 0s;
}
/* .fade-in-outputs {
   visibility: visible;
   opacity: 1;
   transition: visibility 0s linear 0s, opacity 300ms;
} */
.output-title-wrapper {
   position: relative;
   border-bottom: 3px solid rgb(168, 168, 168);
   margin-bottom: 25px;
}
.results-title {
   position: relative;
   bottom: -3px;
   font-size: 1.5em;
   font-weight: bold;
   width: fit-content;
   border-bottom: 3px solid rgba(247, 100, 2);
}
.total-qty-results {
   font-size: 1.5em;
   font-weight: 600;
   margin-bottom: 5px;
}
.total-measure-unit-tag,
.before-tax-tag {
   font-size: 13px;
   font-weight: 500;
   margin-left: 5px;
}
/*For price calc result section*/
.total-price-results {
   font-size: 1.3em;
   font-weight: 600;
   margin-bottom: 5px;
}
.total-cuts-results,
.total-lf-results,
.total-sqyd-results {
   font-size: 1em;
   font-weight: bold;
   margin-bottom: 5px;
}



/* ### FORM 2 STYLING #################################
######################################################### */
.input-group2 {
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin-bottom: 15px;
}
#roll-width2 { 
   width: 60%;
   height: 50px;
   border-radius: 4px;
   text-align: center;
   font-size: 15px;
   font-weight: 600;
   color: #333;
}
#cuts {
   width: 100%;
}
.cut-input-wrapper {
   position: relative;
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin-bottom: 15px;
   transition:all 0.5s ease-in-out;
}
.input-group2 label {
   width: 40%;
   font-weight: 500;
   font-size: 15px;
   /* margin-right: 20px; */
}

.input-group2 input[type="number"] {
   width: 70px;
   height: 50px;
   padding: 0 17px 0 10px;
   border-radius: 4px;
   /* text-align: center; */
   font-size: 17px;
   font-weight: 600;
   color: #333;
}
.input-group2:nth-last-child(3) {
   margin-bottom: 40px;
}

.input-wrapper {
   position: relative;
   display: flex;
   justify-content: space-between;
   align-items: center;
   width: 60%;
}
.measurement-unit {
   position: relative;
   font-weight: 500;
}
.measurement-unit-ft {/* for foot unit */
   left: -18px; 
   color: grey;
}
.measurement-unit-in {
   left: -18px; /* for inch unit */
   color: grey;
}
.delete-input {
   display: flex;
   justify-content: center;
   align-items: center;
   width: fit-content;
   height: 35px;
   background-color: rgb(160, 144, 144);
   color: white;
   font-size: 10px;
   font-weight: 600;
   border-radius: 4px;
   padding: 0 5px;
   border: none;
   cursor: pointer;
   transition: all 0.2s ease-out;
}
.delete-input:hover {
   background-color: rgb(252, 30, 30);
}

.hidden-remove-btn {
   visibility: hidden;
}
.input-price-wrapper {
   justify-content: flex-start;
}
.currency-symbol {
   margin-right: 5px;
   font-weight: 600;
   font-size: 1.5rem;
}

#sell-price-input {
   width: 100px;
   /* margin-right: 5px; */
}
.price-unit-measurement {
   font-size: 15px;
   font-weight: 500;
   margin-left: 5px;
}

/* Output Styling */
#output {
   margin-top: 25px;
   padding: 15px 25px;
   width: 100%;
   background-color: #f6f6f6;
}
footer {
   position: relative;
   left: -18px;
   bottom: -19px;
   display: flex;
   justify-content: center;
   align-items: center;
   width: calc(100% + 36px);
   padding: 15px;
   border-bottom-left-radius: 4px;
   border-bottom-right-radius: 4px;
   background-color: #333;
}
footer > p {
   color: #f6f6f6;
   font-size: 11px;
}

